# spir

./: README.md  pyproject.toml  workplan.md
.github/workflows/: pytest.yaml
FoldIR/: README.md  pyproject.toml
FoldIR/src/foldir/: __init__.py  cli.py  convert.py
FoldIR/src/foldir/dialects/: __init__.py  alphafold3.py  alphafold3_server.py  base.py  chai1.py  protenix.py
FoldIR/src/foldir/ir/: normalize.py
FoldIR/src/foldir/ir/glycans/: parse_af3_server.py  render_chai.py  resolve_linkages.py
FoldIR/tests/: test_convert_smoke.py  test_roundtrip.py
format_descriptions/: glycan_formats.md
src/foldir/: cli.py  convert.py
src/foldir/dialects/: __init__.py  boltz2.py  chai1.py
src/foldir/ir/glycans/: parse_chai.py  render_af3_server.py
src/spir/: README_snippets.md  __init__.py  cli.py  detect.py  glycan_convert.py  io.py
src/spir/adapters/: af3.py  af3_server.py  boltz.py  chai.py  protenix.py
src/spir/constraints/: normalize.py
src/spir/ir/: __init__.py  glycan.py  ir.py  model.py
src/spir/tests/: README.md  test_chain_ids_and_detection.py  test_convert_af3_server_glycan.py  test_roundtrip_smoke.py
src/spir/utils/: ids.py
src/spir/validation/: atoms.py
tests/: test_chai1_restraints.py  test_cli.py  test_convert_smoke.py  test_glycans_roundtrip.py  test_roundtrip.py
